--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     </div>
     <div class="main">
         <div class="products">
-            <p>Products go here.</p>
+            <!-- <button v-on:click="total += 9.99">Add to Cart</button> -->
+            <div v-for="item in items">
+                {{ item.title }}
+            </div>
+            <button v-on:click="addItem">Add to Cart</button>
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
