--- a/index.html
+++ b/index.html
@@ -21,16 +21,27 @@
     <div class="main">
         <div class="products">
             <!-- <button v-on:click="total += 9.99">Add to Cart</button> -->
-            <div v-for="item in items">
-                {{ item.title }}
+            <div class="product" v-for="(item, index) in items">
+                <h4 class="product-title">{{ item.title }}</h4>
+                <button class="add-to-cart" v-on:click="addItem(index)">Add to Cart</button>
             </div>
-            <button v-on:click="addItem">Add to Cart</button>
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
+            <ul>
+                <li class="cart-item" v-for="item in cart">
+                       <div class="item-title"> {{ item.title }}</div>
+                       <span class="item-qty">{{ item.price | currency}}x {{ item.qty }}</span>
+                       <button class="btn" v-on:click="inc(item)">+</button>
+                       <button class="btn" v-on:click="dec(item)">-</button>
+                </li>
+            </ul>
             <div>
-                <div>
-                    {{ total }}
+                <div v-if="cart.length">
+                    Total : {{ total | currency}}
+                </div>
+                <div v-else class="empty-cart">
+                    Not items in the cart.
                 </div>
             </div>
         </div>
